2015_version/css/style.css
/* ... */
.pad-bot15 {
  padding-bottom: 15px;
}
.pad-bot20 {
  padding-bottom: 20px;
}
.pad-bot25 {
  padding-bottom: 25px;
}
.pad-bot30 {
  padding-bottom: 30px;
}
.pad-bot35 {
  padding-bottom: 35px;
}
.pad-bot40 {
  padding-bottom: 40px;
}

.mar-left5 { margin-left: 5px; }
.mar-left10 { margin-left: 10px; }
.mar-left15 { margin-left: 15px; }
.mar-left20 { margin-left: 20px; }
.mar-left25 { margin-left: 25px; }
.mar-left30 { margin-left: 30px; }

.mar-right5 { margin-right: 5px; }
.mar-right10 { margin-right: 10px; }
.mar-right15 { margin-right: 15px; }
.mar-right20 { margin-right: 20px; }
.mar-right25 { margin-right: 25px; }
.mar-right30 { margin-right: 30px; }

.mar-top0 {
  margin-top: 0;
}
.mar-top5 {
  margin-top: 5px;
}

.mar-top10 {
  margin-top: 10px;
}

.mar-top15 {
  margin-top: 15px;
}
.mar-top20 {
  margin-top: 20px;
}
.mar-top25 {
  margin-top: 25px;
}
.mar-top30 {
  margin-top: 30px;
}
.mar-top35 {
  margin-top: 35px;
}
.mar-top40 {
  margin-top: 40px;
}

i.service-icon {
  border: 1px solid #000;
  border-radius: 50%;
  display: inline-block;
  font-size: 56px;
  color:#090068;
  width: 140px;
  height: 140px;
  line-height: 136px;
  vertical-align: middle; 
  text-align: center;
  margin-bottom: 25px;
  
}
i.service-icon:hover {
  border: 1px solid #090068;
  color: #fff;
  border-radius: 50%;
  display: inline-block;
  font-size: 56px;
  background-color:#090068;
  
  line-height: 136px;
  vertical-align: middle; 
  text-align: center;
  cursor: pointer;
}
.service-col {
  padding: 40px 20px;
  margin: 0 10px;
  background-color: none;
  -webkit-transition: all 0.5s ease-out;
  -moz-transition: all 0.5s ease-out;
  -o-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  margin-bottom: 40px;
}
.service-col .service-icon {
  height: 140px;
  width: 140px;
  margin: 0 auto;
  border: 3px solid #090068;
  -webkit-box-shadow: inset 0 0 0 0 #fff;
  -moz-box-shadow: inset 0 0 0 0 #fff;
  box-shadow: inset 0 0 0 0 #fff;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  transition-delay: 0.3s;
  -webkit-transition-delay: 0.3s;
}
.service-col .service-icon i {
  font-size: 4.5em;
  line-height: 140px;
  margin: 0 auto;
  color: #090068;
  -webkit-animation: serviceicon 0.6s ease-in-out;
  -moz-animation: serviceicon 0.6s ease-in-out;
  animation: serviceicon 0.6s ease-in-out;
}
.service-col h2 {
  font-weight: 600;
  margin: 1em 0 0.75em;
}
.service-col h2 a {
  color: #090068;
}

}
.service-col p {
  font-size: 0.875em;
  font-weight: 200;
  margin-bottom: 0;
}
.service-col:hover {
  background-color: rgba(38,105,199, 0.25);
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  -o-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}
.service-col:hover .service-icon {
  -webkit-transition: all 0.5s ease-out;
  -moz-transition: all 0.5s ease-out;
  -o-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  transition-delay: 0s;
  -webkit-transition-delay: 0s;
  -webkit-box-shadow: inset 0 0 0 100px #fff;
  -moz-box-shadow: inset 0 0 0 100px #fff;
  box-shadow: inset 0 0 0 100px #fff;
}
.service-col:hover .service-icon i {
  color: #090068;
  -webkit-animation: serviceiconhover 0.5s ease-in-out;
  -moz-animation: serviceiconhover 0.5s ease-in-out;
  animation: serviceiconhover 0.5s ease-in-out;
}

.mar-bot0 {
  margin-bottom: 0;
}
.mar-bot5 {
  margin-bottom: 5px;
}

.mar-bot10 {
  margin-bottom: 10px;
}

.mar-bot15 {
  margin-bottom: 15px;
}
.mar-bot20 {
  margin-bottom: 20px;
}
.mar-bot25 {
  margin-bottom: 25px;
}
.mar-bot30 {
  margin-bottom: 30px;
}
.mar-bot35 {
  margin-bottom: 35px;
}
.mar-bot40 {
  margin-bottom: 40px;
}
.mar-bot45 {
  margin-bottom: 45px;
}

section.section {
  margin:0;
  padding: 80px 0 60px 0;
}


.bg-white {
  background-color: #fff;
}

.section-header {
  text-align: center;
padding-top: 30px;
}
.section-header h2.section-heading {
  text-transform: uppercase;
  font-weight: 700;
}

/* Applies to all parallax on all screens */
.section-parallax-format {
  background-repeat: no-repeat;
}
#parallax-company{  
  background-image: url(../img/company_hq.jpg);
}
#parallax-stanford{  
  background-image: url(../img/stanford_quad2.jpg);
}
#parallax-research{ 
  background-image: url(../img/drone.jpg);
}
#parallax-graph{ 
  background-image: url(../img/dark_graph.jpg);
}
/* Applies to all parallax on certains screens */
@media (max-width: 819x) {
  .section-parallax-format {
    height: 300px;
  }
}
@media (min-width: 820px) {
  .section-parallax-format {
    height: 400px;
  }
}

.line-pricing-table {
  margin: 20px 0 25px 0;
}
.line-wrap {
  width: 1200px;
  margin: 0 auto;
  position: relative;
}
.line-wrap:after {
  clear: both;
  content: "";
  display: block;
}
.line-pricing-table {
  display: table;
  width: 100%;
  table-layout: fixed;
}
.line-pricing-table .pricing-table-wrap {
  display: table-cell;
  text-align: center;
}

.line-pricing-table .pricing-table-wrap ul {
  border: 2px solid #e6e6e6;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
  border-radius: 5px;
  margin: 0 10px;
  padding: 40px 20px;
  background: #ffffff;
  list-style: none;
}
.line-pricing-table .pricing-table-wrap ul li.line-head-row {
  font-size: 24px;
  line-height: 100%;
  font-weight: bold;
  padding-bottom: 5px;
  list-style: none;
}
.line-pricing-table .pricing-table-wrap ul li.line-price-row {
  border-bottom: 2px solid #e6e6e6;
  padding-bottom: 30px;
  margin-bottom: 35px;
  list-style: none;
}
.line-pricing-table .pricing-table-wrap ul li.line-price-row p {
  margin: 0;
}
.line-pricing-table .pricing-table-wrap ul li.line-price-row small {
  font-size: 18px;
  color: #b3b3b3;
  list-style: none;
}
/* ... */

